--- a/flower_shop/templates/orders/create_order.html
+++ b/flower_shop/templates/orders/create_order.html
@@ -1,14 +1,27 @@
-<h1>Оформление заказа: {{ flower.name }} ({{ flower.color }})</h1>
-<form method="post">
-    {% csrf_token %}
-    <label>Количество:</label>
-    <input type="number" name="quantity" min="1" required>
-    <br>
-    <label>Адрес доставки:</label>
-    <textarea name="address" required></textarea>
-    <br>
-    <label>Комментарии:</label>
-    <textarea name="comments"></textarea>
-    <br>
-    <button type="submit">Оформить заказ</button>
-</form>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Оформление заказа</title>
+</head>
+<body>
+    <h1>Оформление заказа: {{ flower.name }} ({{ flower.color }})</h1>
+    <form method="post">
+        {% csrf_token %}
+        <label for="quantity">Количество:</label>
+        <input type="number" id="quantity" name="quantity" min="1" required>
+        <br>
+
+        <label for="address">Адрес доставки:</label>
+        <textarea id="address" name="address" required></textarea>
+        <br>
+
+        <label for="comments">Комментарии:</label>
+        <textarea id="comments" name="comments"></textarea>
+        <br>
+
+        <button type="submit">Оформить заказ</button>
+    </form>
+</body>
+</html>
