--- a/flower_shop/orders/templates/orders/catalog.html
+++ b/flower_shop/orders/templates/orders/catalog.html
@@ -7,14 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="container mt-5">
-    <h1 class="mb-4">Каталог цветов</h1>
+    <h1 class="mb-4 text-center">Каталог цветов</h1>
     <div class="row">
         {% for flower in flowers %}
-            <div class="col-md-4 mb-3">
+            <div class="col-md-4 mb-4">
                 <div class="card">
+                    <img src="{{ flower.image.url }}" class="card-img-top" alt="{{ flower.name }}">
                     <div class="card-body">
                         <h5 class="card-title">{{ flower.name }} ({{ flower.color }})</h5>
-                        <p class="card-text">{{ flower.price }}₽</p>
+                        <p class="card-text">Цена: {{ flower.price }}₽</p>
                         <a href="{% url 'create_order' flower.id %}" class="btn btn-primary">Заказать</a>
                     </div>
                 </div>
